--- a/index.html
+++ b/index.html
@@ -3,11 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Animated Website</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.cdnfonts.com/css/futura-pt" rel="stylesheet">
 </head>
 <body>
+  <div id="main">
+    <div id="page1">
+      <h1>Change <br> the course</h1>
+      <div id="video-container">
+        <div id="play">PLAY</div>
+        <video loop muted src="video.mp4" autoplay></video>
+      </div>
+    </div>
+  </div>
 
-  
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/gsap.min.js" integrity="sha512-NcZdtrT77bJr4STcmsGAESr06BYGE8woZdSdEgqnpyqac7sugNO+Tr4bGwGF3MsnEkGKhU2KL2xh6Ec+BqsaHA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="index.js"></script>
 </body>
 </html>
