--- a/index.html
+++ b/index.html
@@ -21,13 +21,19 @@
     <div id="page2">
       <div id="elem1" class="elem">
         <img data-scroll data-scroll-speed="1.5" src="https://cdn.sanity.io/images/w8f1ak3c/production/436dc55529165898c0ecc8299c9ef541252d38dc-3490x5236.jpg/EDITED-AB5I5446_PhotoCredit-Nikki-To.jpg?rect=0,1090,3490,4146&fp-x=0.5&fp-y=0.6040625&w=1024&h=1707&fit=crop&crop=focalpoint&auto=format" alt="">
+        <div data-scroll data-scroll-speed="-1" class="dets"></div>
       </div>
       <div id="elem1" class="elem">
         <img data-scroll data-scroll-speed="1.5" src="https://cdn.sanity.io/images/w8f1ak3c/production/9917c06d3f69596fba7a68f571f4691df5e40028-1778x1912.png/Screenshot%202025-06-18%20at%204.26.53%E2%80%AFPM.png?rect=316,0,1147,1912&w=1024&h=1707&fit=min&auto=format" alt="">
+        <div data-scroll data-scroll-speed="-1" class="dets"></div>
       </div>
       <div id="elem1" class="elem">
         <img data-scroll data-scroll-speed="1.5" src="https://cdn.sanity.io/images/w8f1ak3c/production/06dac0cbccbec66e8c76afc0cc323e5241cc508b-3000x5000.png/Website%20Slider%20Slice%20Images%20(18).png?rect=1,0,2999,5000&w=1024&h=1707&auto=format" alt="">
+        <div data-scroll data-scroll-speed="-1" class="dets"></div>
       </div>
+    </div>
+    <div id="page3">
+      
     </div>
   </div>
 
