--- a/index.html
+++ b/index.html
@@ -33,7 +33,18 @@
       </div>
     </div>
     <div id="page3">
-      
+      <div class="child" id="child1">
+        <img src="https://cdn.sanity.io/images/w8f1ak3c/production/6e756f1fb46baa494c240edfc85ccbf3a1b2f14f-2000x3000.png/AB5I5869_Sweet_mem_book_NikkiTo-LoRes.png?rect=0,485,2000,2104&fp-x=0.5404411764705882&fp-y=0.5355036764705883&w=640&h=673&fit=crop&crop=focalpoint&auto=format" alt="">
+      </div>
+      <div class="child" id="child2">
+        <img src="https://cdn.sanity.io/images/w8f1ak3c/production/3b2b544a85c69e257f9878c1d7a400090f615188-5000x5000.png/Hugs-Kisses-Pack-Two-Good-Co.png?w=640&h=640&auto=format" alt="">
+      </div>
+      <div class="child" id="child3">
+        <img src="https://cdn.sanity.io/images/w8f1ak3c/production/191fb1c3aff66e559d8bf9933f54bcd85d33ede5-1455x1455.png/Donate-a-meal-to-womens-shelter-two-good-co.png?w=640&h=640&auto=format" alt="">
+      </div>
+      <div class="child" id="child4">
+        <img src="https://cdn.sanity.io/images/w8f1ak3c/production/d6a2a4be8e3063d64648773f57f5f447609a93ab-5000x5000.png/Love-Care-Pack-Expanded-Two-Good-Co.png?w=640&h=640&auto=format" alt="">
+      </div>
     </div>
   </div>
 
